# BinRenderer

./: .editorconfig  .gitignore  Basic.hlsl  BinRenderer.sln  BinRenderer.vcxproj  BinRenderer.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Camera.h  D3D11RendererAPI.cpp  D3D11RendererAPI.h  DeferredRenderer.cpp  DeferredRenderer.h  DrawCommand.h  DrawQueue.h  GBufferPass.cpp  GBufferPass.h  GeometryGenerator.cpp  GeometryGenerator.h  Handle.h  LightingPass.cpp  LightingPass.h  MaterialSystem.cpp  MaterialSystem.h  MeshData.h  MeshFactory.cpp  MeshFactory.h  MeshRegistry.cpp  MeshRegistry.h  PSORegistry.cpp  PSORegistry.h  PipelineState.h  README.md  RenderGraph.h  RenderGraphBuilder.h  RenderStates.h  RendererAPI.h  SamplerRegistry.h  TestApp.cpp  TextureLoader.h  (+9 more)
Core/: Buffer.h  DrawCommand.h  DrawQueue.h  EngineConfig.h  FlagOps.h  Handle.h  IApplicationListener.h  IRenderPass.h  ITransientBufferAllocator.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  PassResources.h  RHIApplication.cpp  RHIApplication.h  RHIModel.cpp  RHIModel.h  RHIScene.cpp  RHIScene.h  RenderEnums.h  RenderGraph.h  RenderGraphBuilder.h  RenderManager.cpp  RenderManager.h  RenderStates.h  RendererAPI.h  ResourceDesc.h  StaticBatcher.cpp  StaticBatcher.h  Vertex.h
Examples/: RenderGraph_Example.cpp
LegacyVulkan/: Application.cpp  Application.h  BarrierHelper.cpp  Camera.cpp  Camera.h  CommandBuffer.h  DescriptorPool.h  DescriptorSet.cpp  EngineConfig.h  IApplicationListener.h  Image2D.h  InputManager.cpp  InputManager.h  Logger.cpp  MappedBuffer.h  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelNode.cpp  ModelNode.h  Pipeline.cpp  Pipeline.h  PipelineCompute.cpp  PushConstants.cpp  RenderPassManager.cpp  RenderPassManager.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  ResourceBinding.cpp  ResourceBinding.h  ResourceHandle.h  (+18 more)
(+363 files in other folders)
